* js/info.css (iframe.node): Set "display: block".  This is intended to prevent a double scroll bar, one for the iframe, one for the containing div, by making both elements the same height.

--- a/js/info.css
+++ b/js/info.css
@@ -72,6 +72,7 @@ iframe.node {
     border: none;
     margin: 0px;
     padding: 0px;
+    display: block;
 }
 
 #sub-pages.blurred {
